# workflows-book

./: pyproject.toml
.github/workflows/: ci.yml
book/: netlify.toml
inbox/: GGG 201b, jan 2020 - lab 1 - NOTES.md  GGG 201b, jan 2020 - lab 3 - NOTES.md
