[tool.poetry]
name = "workflows-book"
version = "0.1.0"
description = "The Workflow Enabled Bioinformatician"
authors = ["C. Titus Brown <titus@idyll.org>", "Luiz Irber <lcirberjr@ucdavis.edu>"]

[tool.poetry.dependencies]
python = "^3.6"
jupyter-book = "^0.6.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
